tidos/tests/control_tags/panics/missing_end_control_tag.stderr
error: missing matching closing tag `{/if}`
 --> tests/control_tags/panics/missing_end_control_tag.rs:5:3
  |
5 |         {#if true}
  |         ^^^^^^^^^^
